objects/EXPRN__Salesforce_BIQ_Exception__c.object
<CustomObject>
    <description>Capture exceptions resulting from WebServices call to Experian</description>
    <fields>
        <fullName>EXPRN__Exception_Component__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exception Component</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exception_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exception Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exception_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exception Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Experian Salesforce BIQ Exception</label>
    <listViews>
        <fullName>EXPRN__All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>EXPRN__Exception_Component__c</columns>
        <columns>EXPRN__Exception_Type__c</columns>
        <columns>EXPRN__Exception_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EXPRN__All1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Salesforce BIQ Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experian Salesforce BIQ Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>